# Burger_Navigation

./: README.md
Matlab_szim/: lCScript.m  lineControl.slx  lineControl.slxc
Matlab_szim/slprj/sim/varcache/lineControl/: checksumOfCache.mat  varInfo.mat
Matlab_szim/slprj/sim/varcache/lineControl/tmwinternal/: simulink_cache.xml
doc/: manual.docx
src/my_pkg/: CMakeLists.txt  README.txt  package.xml
src/my_pkg/src/: navi_node.cpp
